tests/neg/i11963b.scala
// scalac: -Xfatal-warnings

open abstract class Foo // error
